Add: ジャンル名の追加

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -11261,6 +11261,7 @@ header.masthead .masthead-heading {
   width: 14rem;
   height: 14rem;
   border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  object-fit: contain;
 }
 .team-member h4, .team-member .h4 {
   margin-top: 1.5rem;
