--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -11268,6 +11268,42 @@ header.masthead .masthead-heading {
   margin-bottom: 0;
 }
 
+.team-member-show {
+  margin-bottom: 3rem;
+}
+.team-member-show img {
+  width: 14rem;
+  height: 14rem;
+  border: 0.5rem solid rgba(0, 0, 0, 0.1);
+  object-fit: contain;
+}
+.team-member-show h4, .team-member .h4 {
+  margin-top: 1.5rem;
+  margin-bottom: 0;
+}
+
+.thumbnail-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.thumbnail li {
+  list-style-type: none;
+}
+
+.thumbnail li img {
+  width: 90px;
+  padding-left: 2px;
+}
+
 .img-brand {
   height: 2.75rem;
 }
@@ -11278,6 +11314,14 @@ header.masthead .masthead-heading {
   background-repeat: no-repeat;
   background-position: center;
   height: 90vh;
+}
+
+.profile-container {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 3rem);
+  padding-left: var(--bs-gutter-x, 3rem);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 section#contact .section-heading {
