--- a/app/views/drummers/show.html.erb
+++ b/app/views/drummers/show.html.erb
@@ -41,6 +41,17 @@
             <% end %>
           </ul>
         </div>
+        <% @drummer.artists.each do |artist| %>
+          <% if artist.album_image.present? && artist.album_url.present? %>
+            <div class="border-bottom border-5 pt-3 mb-3 w-60">
+              <h4><%= artist.name %><i class="bi bi-spotify px-2"></i></h4>
+            </div>
+
+            <div class="album-img">
+              <%= link_to image_tag(artist.album_image), artist.album_url, target: "_blank" %>
+            </div>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
