--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -4557,7 +4557,7 @@ textarea.form-control-lg {
   list-style: none;
 }
 
-.page-link {
+.-link {
   position: relative;
   display: block;
   color: #ffc800;
@@ -11001,6 +11001,20 @@ header.masthead .masthead-heading {
     line-height: 4.5rem;
     margin-bottom: 4rem;
   }
+}
+.responsive-iframe-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9アスペクト比の場合 */
+  height: 0;
+}
+.responsive-iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 #portfolio .portfolio-item {
   max-width: 26rem;
