Fix: kaminariをレスポンシブ対応

--- a/app/views/drummers/index.html.erb
+++ b/app/views/drummers/index.html.erb
@@ -39,7 +39,7 @@
         </div>
       </div>
     <% end %>
-    <div class="pt-5 justify-content-center d-flex">
+    <div class="justify-content-center d-flex">
       <%= paginate @drummers, theme: 'bootstrap-5' %>
     </div>
   </div>
