--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -4557,7 +4557,7 @@ textarea.form-control-lg {
   list-style: none;
 }
 
-.-link {
+.page-link {
   position: relative;
   display: block;
   color: #ffc800;
