--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-          <li class="nav-item"><%= nav_link_to 'ドラマーを探す', '#', anchor: 'search' %></li>
+          <li class="nav-item"><%= nav_link_to 'ドラマーを探す', search_drummers_path, anchor: 'search' %></li>
           <li class="nav-item"><%= nav_link_to 'ドラマー一覧', drummers_path, anchor: 'drummers' %></li>
           <li class="nav-item"><%= nav_link_to 'みんなのおすすめ投稿', '#', anchor: 'post' %></li>
           <li class="nav-item"><%= nav_link_to 'おすすめ診断', '#', anchor: 'diagnosis' %></li>
