--- a/app/views/drummers/search.html.erb
+++ b/app/views/drummers/search.html.erb
@@ -1,9 +1,4 @@
-<header class="masthead">
-  <div class="container">
-    <div class="masthead-subheading"><%= t('tops.index.subtitle') %></div>
-    <div class="masthead-heading text-uppercase"><%= t('tops.index.title') %></div>
-  </div>
-</header>
+<%= render 'tops/masthead' %>
 
 <section class="page-section bg-light" id="search">
   <div class="container">
