--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -35,13 +35,15 @@
     </div>
   </section>
   <!-- guest-login-->
-  <section class="page-section bg-light" id="guest-login">
-     <div class="container">
-       <div class="text-center">
-         <h2 class="section-heading text-uppercase"><%= t('defaults.guest_login') %></h2>
-         <h3 class="section-subheading text-muted"><%= t('.guest_login_describe') %></h3>
-         <%= link_to t('defaults.guest_login'), guest_login_path, class: "btn btn-primary btn-xl text-uppercase", data:{ turbo_method: :post } %>
+  <% unless logged_in? %>
+    <section class="page-section bg-light" id="guest-login">
+       <div class="container">
+         <div class="text-center">
+           <h2 class="section-heading text-uppercase"><%= t('defaults.guest_login') %></h2>
+           <h3 class="section-subheading text-muted"><%= t('.guest_login_describe') %></h3>
+           <%= link_to t('defaults.guest_login'), guest_login_path, class: "btn btn-primary btn-xl text-uppercase", data:{ turbo_method: :post } %>
+         </div>
        </div>
-     </div>
-  </section>
+    </section>
+  <% end %>
 </div> 
