--- a/app/views/drummers/_form.html.erb
+++ b/app/views/drummers/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="mb-5">
 <%= search_form_for @q, url: search_drummers_path,
                         html: {
                           data: { turbo_frame: "drummers-list",
@@ -17,4 +18,4 @@
   <%= link_to t('defaults.clear'), "#{search_drummers_path}#search", class: 'px-1 btn btn-outline-secondary' %>
   </div>
 <% end %>
-
+</div>
