--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
         <% if @user == current_user %>
           <%= link_to t('.edit'), edit_user_path(@user), class: 'btn btn-primary', data: {turbo_frame: 'user-edit'} %>
         <% end %>
+        <%= link_to t('.back'), posts_path, class: 'btn btn-outline-secondary' %>
       </div>
     </div>
   </div>
