Fix: 投稿タイトルの変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,11 +6,11 @@
 
       <div class="col-xl-6">
         <div class="text-center">
-          <h1 class="mb-5"><%= t('.title') %></h1>
-          <h3 class="mb-5"><%= t('.subtitle') %></h3>
+          <h1 class="section-heading text-uppercas"><%= t('.title') %></h1>
+          <h3 class="section-subheading text-muted"><%= t('.subtitle') %></h3>
         </div>
 
-        <div class="error_message pt-3" id='error-messages' data-reset-form-target="errorMessage"></div>
+        <div class="error_message" id='error-messages' data-reset-form-target="errorMessage"></div>
           <%= render 'form' %>
           <% if @posts.present? %>
             <div id="post">
