Add: commentフォームをリセットするviewを追加

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,7 +6,8 @@
                                data: { comment_form_target: 'commentForm',
                                        action: "input->comment-form#validateForm" } %>
     <%= form.submit t('helpers.submit.create'), class: "btn btn-primary",
-                                                data:{ comment_form_target: 'submit'},
+                                                data:{ comment_form_target: 'submit',
+                                                       action: "click->comment-form#submitForm" },
                                                 disabled: true %>
   </div>
 <% end %>
