--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<%= turbo_stream_from "comments" %>
 <%= render "tops/masthead" %>
 <section class="page-section" id="post">
   <div class="container">
@@ -21,9 +22,14 @@
         <div class="pt-3">
           <% if @comments.present? %>
             <h3 class="text-center"><%= t('.comments') %></h3>
-            <%= render @comments %>
+            <div id="comments">
+              <%= render @comments %>
+            </div>
           <% else %>
-            <p class="text-center"><%= t('.not_comments') %></p>
+            <h3 class="text-center"><%= t('.comments') %></h3>
+            <div id="comments">
+              <%= render @comments %>
+            </div>
           <% end %>
         </div>
       </div>
