--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body>
+  <body data-current-user-id="<%= current_user&.id %>">
     <% if logged_in? %>
       <%= render 'shared/header' %>
     <% else %>
