Fix: 投稿詳細へのリンクurlにアンカーつける

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <% if post.id %>
-  <div class="card clickable-card" id="post-<%= post.id %>" data-href="<%= post_path(post) %>">
+  <div class="card clickable-card" id="post-<%= post.id %>" data-href="<%= post_path(post) %>#post-show">
   <div class="card-body">
     <div class="row">
 
