--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,18 @@
 <%= turbo_stream_from "comments" %>
 <%= render "tops/masthead" %>
-<section class="page-section" id="post">
+<section class="page-section" id="post-show">
+
   <div class="container">
     <div class="row">
       <div class="col-xl-3">
       </div>
 
       <div class="col-xl-6">
+        <div class="text-center">
+          <h1 class="section-heading text-uppercas"><%= t('.title') %></h1>
+          <h3 class="section-subheading text-muted"><%= t('.subtitle') %></h3>
+        </div>
+
         <%= link_to t('helpers.submit.back'), "#{posts_path}#posts", class: 'btn btn-outline-secondary' %>
         <%# 投稿 %>
         <div class="pt-3">
