Fix: プロフィール画面の日本語化

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,6 +7,6 @@
   <% if @user.profile.present? %>
     <p><%= @user.profile %></p>
   <% else %>
-    <p><%= t('.not_profile')%></p>
+    <p><%= t('users.show.not_profile')%></p>
   <% end %>
 <% end %>
