Fixed: プロフィールから投稿一覧へ戻るボタンにアンカー追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div style="background-color: gray; height: 90px; width: 100%;"></div>
-<section class="page-section bg-light" id="user-show-page">
+<section class="page-section bg-light">
   <div class="container">
     <div class="row">
       <div class="col-xl-3 text-center" id="user-avatar">
@@ -14,7 +14,7 @@
         <% if @user == current_user %>
           <%= link_to t('.edit'), edit_user_path(@user), class: 'btn btn-primary', data: {turbo_frame: 'user-edit'} %>
         <% end %>
-        <%= link_to t('.back'), posts_path, class: 'btn btn-outline-secondary' %>
+        <%= link_to t('helpers.submit.back'), "#{posts_path}#posts", class: 'btn btn-outline-secondary' %>
       </div>
     </div>
   </div>
