--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -40,6 +40,12 @@
             <% end %>
           </div>
 
+          <div class="border-top">
+            <div class="mt-2" id="like-button-<%= post.id %>">
+              <%= render 'posts/like_button', post: post %>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
