--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -3688,6 +3688,10 @@ textarea.form-control-lg {
   background-color: transparent;
   border: 0;
 }
+.dropdown-link {
+  text-decoration: none !important;
+}
+
 .dropdown-item:hover, .dropdown-item:focus {
   color: #1e2125;
   background-color: #e9ecef;
