--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,25 +2,58 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <%= link_to 'Drummer Tracker', root_path, class: 'navbar-brand' %>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+
+      <button class="navbar-toggler" 
+              type="button" 
+              data-bs-toggle="collapse" 
+              data-bs-target="#navbarResponsive" 
+              aria-controls="navbarResponsive" 
+              aria-expanded="false" 
+              aria-label="Toggle navigation">
+
         <i class="fas fa-bars ms-1"></i>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-          <li class="nav-item"><%= nav_link_to Drummer.human_attribute_name(:search), search_drummers_path, anchor: 'search' %></li>
-          <li class="nav-item"><%= nav_link_to Drummer.model_name.human, drummers_path, anchor: 'drummers' %></li>
-          <li class="nav-item"><%= nav_link_to Post.model_name.human, posts_path, anchor: 'posts' %></li>
-          <li class="nav-item"><%= nav_link_to 'おすすめ診断', '#' %></li>
+          <li class="nav-item">
+            <%= nav_link_to Drummer.human_attribute_name(:search), search_drummers_path, anchor: 'search' %>
+          </li>
+          <li class="nav-item">
+            <%= nav_link_to Drummer.model_name.human, drummers_path, anchor: 'drummers' %>
+          </li>
+          <li class="nav-item">
+            <%= nav_link_to Post.model_name.human, posts_path, anchor: 'posts' %>
+          </li>
+          <li class="nav-item">
+            <%= nav_link_to 'おすすめ診断', '#' %>
+          </li>
 
           <li class="nav-item dropdown">
+            <%= link_to t('defaults.mypage'), "#", class: "nav-link dropdown-toggle",
+                                                   id: "navbarDropdownMypage", 
+                                                   data: { bs_toggle: "dropdown" },
+                                                   aria: { expanded: "false" } %>
 
-            <%= link_to t('defaults.mypage'), "#", class: "nav-link dropdown-toggle", id: "navbarDropdownMypage", data: { bs_toggle: "dropdown" }, aria: { expanded: "false" } %>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMypage">
-              <li class="dropdown-item"><%= link_to User.human_attribute_name(:profile), user_path(current_user) %></li>
-              <li class="dropdown-item"><%= link_to t('defaults.logout'), logout_path, data:{ turbo_method: :delete, turbo_confirm: t('defaults.message.logout_confirm') } %></li>
-              <li class="dropdown-item"><%= link_to t('defaults.service'), root_path, anchor: 'services' %></li>
-              <li class="dropdown-item"><%= link_to Contact.model_name.human, new_contact_path, anchor: 'contact' %></li>
+              <li class="dropdown-item">
+                <%= link_to User.human_attribute_name(:profile), user_path(current_user), class: 'dropdown-link' %>
+              </li>
+              <li class="dropdown-item">
+                <%= link_to t('defaults.logout'), logout_path, class: 'dropdown-link',
+                                                               data: { turbo_method: :delete, 
+                                                                      turbo_confirm: t('defaults.message.logout_confirm') } %>
+              </li>
+              <li class="dropdown-item">
+                <%= link_to t('defaults.service'), root_path, anchor: 'services',
+                                                              class: 'dropdown-link' %>
+              </li>
+              <li class="dropdown-item">
+                <%= link_to Contact.model_name.human, new_contact_path, anchor: 'contact',
+                                                                        class: 'dropdown-link' %>
+              </li>
             </ul>
+
           </li>
         </ul>
       </div>
